# groupme_bot

./: Cargo.toml  README.md
examples/: create_and_destroy.rs  create_bot.rs  post.rs  simple.rs
src/: bot.rs  bot_builder.rs  client.rs  error.rs  groupme.rs  lib.rs
tests/: bad_auth_test.rs  no_token_test.rs
