[package]
name = "groupme_bot"
version = "0.1.2"
authors = ["Dominik Winecki <dominikwinecki@gmail.com>"]
readme = "README.md"
repository = "https://github.com/dominikWin/groupme_bot.git"
homepage = "https://github.com/dominikWin/groupme_bot.git"
documentation = "https://docs.rs/groupme_bot/"
description = "Rust library wrapper for Groupme bots API."
license = "MIT"

[dependencies]
"reqwest" = "~0.8"
"serde" = "1.0"
"serde_json" = "1.0"
